test/domains/diten/castAwayStridableDomain.2.good
error: IllegalArgumentError: bad cast from stride 1 to strideKind.negative
castAwayStridableDomain.chpl:15: error: halt reached - bad cast from stride 1 to strideKind.negative
